--- a/Day#13_KNN_LR_Assignment.ipynb
+++ b/Day#13_KNN_LR_Assignment.ipynb
@@ -982,7 +982,8 @@
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "neigh = KNeighborsClassifier(n_neighbors=3)\n",
-    "neigh.fit(X_train, y_train)"
+    "neigh.fit(X_train, y_train)\n",
+    "\n"
    ]
   }
  ],
