--- a/Day#13_KNN_LR_Assignment.ipynb
+++ b/Day#13_KNN_LR_Assignment.ipynb
@@ -195,7 +195,13 @@
    "execution_count": 5,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#X value is only the age and EstimatedSalary means drop other columns\n",
+    "X = dataset.drop(['User ID','Gender', 'Purchased'],axis=1)\n",
+    "\n",
+    "#y is the target\n",
+    "y = dataset['Purchased']"
+   ]
   },
   {
    "cell_type": "code",
@@ -301,6 +307,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y.tail()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -325,7 +340,12 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "#Since y is set to be Purchased column       y = dataset['Purchased'] \n",
+    "#y.value_counts()\n",
+    "\n",
+    "dataset['Purchased'].value_counts()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -435,7 +455,9 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "dataset.corr()"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -463,7 +485,12 @@
     "id": "AVzJWAXIhxoC"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "#from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "#Splitting the data into train and test\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.25, random_state = 0)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -499,7 +526,16 @@
     "outputId": "67f64468-abdb-4fe7-cce9-de0037119610"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "# Building the Logistic Regression model\n",
+    "#from sklearn.linear_model import LogisticRegression\n",
+    "\n",
+    "classifier = LogisticRegression(random_state = 0)\n",
+    "\n",
+    "\n",
+    "#Training the Model\n",
+    "classifier.fit(X_train,y_train)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -545,7 +581,12 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "#predictions is y_pred\n",
+    "y_pred = classifier.predict(X_test) \n",
+    "\n",
+    "print(y_pred)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -693,7 +734,12 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "test_dataset=pd.DataFrame(X_test)\n",
+    "test_dataset['Actual_Purchased']= y_test #since y is set to be the target y = dataset['Purchased']\n",
+    "test_dataset['Predict_Purchased']= y_pred #y_pred is the prediction \n",
+    "test_dataset"
+   ]
   },
   {
    "cell_type": "code",
@@ -763,7 +809,11 @@
      "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "from sklearn.metrics import classification_report, confusion_matrix\n",
+    "\n",
+    "confusion_matrix(y_test,y_pred)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -786,7 +836,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(classification_report(y_test,y_pred)) #y_pred is the prediction\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -829,14 +881,19 @@
     "id": "9fQlDPKCh8sc"
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.preprocessing import StandardScaler\n",
+    "ss=StandardScaler()\n"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": 21,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "ss.fit(X_train,y_train)"
+   ]
   },
   {
    "cell_type": "code",
@@ -905,7 +962,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(classifier.predict(ss.transform([[30,90000]])))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -927,7 +986,9 @@
      ]
     }
    ],
-   "source": []
+   "source": [
+    "print(classifier.predict(ss.transform([[40,90000]])))\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -959,14 +1020,14 @@
      ]
     }
    ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "knc = KNeighborsClassifier()\n",
+    "\n",
+    "\n",
+    "knc.fit(X_train,y_train)\n",
+    "pred = knc.predict(X_test)"
+   ]
   }
  ],
  "metadata": {
@@ -993,7 +1054,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.9.13"
   }
  },
  "nbformat": 4,
