--- a/Day#13_KNN_LR_Assignment.ipynb
+++ b/Day#13_KNN_LR_Assignment.ipynb
@@ -965,25 +965,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": 257,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "KNeighborsClassifier(n_neighbors=3)"
-      ]
-     },
-     "execution_count": 255,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[57 11]\n",
+      " [11 21]]\n",
+      "              precision    recall  f1-score   support\n",
+      "\n",
+      "           0       0.84      0.84      0.84        68\n",
+      "           1       0.66      0.66      0.66        32\n",
+      "\n",
+      "    accuracy                           0.78       100\n",
+      "   macro avg       0.75      0.75      0.75       100\n",
+      "weighted avg       0.78      0.78      0.78       100\n",
+      "\n"
+     ]
     }
    ],
    "source": [
     "from sklearn.neighbors import KNeighborsClassifier\n",
     "neigh = KNeighborsClassifier(n_neighbors=3)\n",
     "neigh.fit(X_train, y_train)\n",
-    "\n"
+    "\n",
+    "pred = neigh.predict(X_test)\n",
+    "print(confusion_matrix(y_test,pred))\n",
+    "print(classification_report(y_test,pred))"
    ]
   }
  ],
